added image and improved the hero page

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
           <p>Join millions of other users who have succeeded today.</p>
           <a href="register.html" class="cta-btn">Get Started</a>
         </div>
+        <div class="hero-image">
+          <img src="images/HeroImage.png" alt="Hero">
+      </div>
       </section>
     </main>
 
