--- a/public/index.html
+++ b/public/index.html
@@ -21,25 +21,77 @@
             </div>
             <h2>LiftOff!</h2>
             <div class="links">
-              <nav><a href="about.html">About</a></nav>
               <nav><a href="login.html">Login</a></nav>
             </div>
           </div>
         </header>
       </div>
 
-      <section class="hero">
+      <section class="hero fade-in">
         <div class="hero-content">
           <h1>Reach your dream body with LiftOff!</h1>
           <p>Join millions of other users who have succeeded today.</p>
           <a href="register.html" class="cta-btn">Get Started</a>
         </div>
-        <div class="hero-image">
+        <div class="hero-image fade-in">
           <img src="images/HeroImage.png" alt="Hero">
       </div>
       </section>
-    </main>
 
-    <script src="js/app.js"></script>
+      <div class="section-divider fade-in"></div>
+
+      <section class="about-page">
+          <section class="about-hero fade-in">
+              <h1 class="about_title">Built for people who actually want to see progress.</h1>
+              <p class="about_tagline">
+                  LiftOff! is a simple, focused workout companion designed to make tracking your training
+                  feel easy, not overwhelming.
+              </p>
+          </section>
+
+          <section class="about-grid fade-in">
+              <article class="about-card">
+                  <h2>Our Mission</h2>
+                  <p>
+                      We built LiftOff! because most fitness apps are too complicated or too generic. Our goal is 
+                      to help you train smarter, stay consistent, and see long-term progress.
+                  </p>
+              </article>
+
+              <article class="about-card">
+                  <h2>How LiftOff Helps You</h2>
+                  <ul>
+                      <li>Log workouts quickly & efficiently.</li>
+                      <li>Track progress with clear visuals.</li>
+                      <li>Custom routines tailored to your goals.</li>
+                  </ul>
+              </article>
+
+              <article class="about-card">
+                  <h2>Why We Created It</h2>
+                  <p>
+                      As students balancing school and training, we wanted a fast, clean app that fits real life —
+                      whether you're lifting at the gym, at home, or between classes.
+                  </p>
+              </article>
+
+              <article class="about-card">
+                  <h2>What's Coming Next</h2>
+                  <ul>
+                      <li>Personal best tracking & streaks.</li>
+                      <li>Advanced workout templates.</li>
+                      <li>Smarter recommendations.</li>
+                  </ul>
+              </article>
+          </section>
+
+          <section class="about-footer-cta fade-in">
+              <p>Ready to start your journey?</p>
+              <a href="login.html" class="cta-btn about-cta-btn">Get Started</a>
+          </section>
+      </section>
+    </main>
+    <script src="app.js"></script>
+    <script src="fade.js"></script>
   </body>
 </html>
