--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,6 @@
           </section>
       </section>
     </main>
-    <script src="app.js"></script>
-    <script src="fade.js"></script>
+    <script src="/js/fade.js"></script>
   </body>
 </html>
