--- a/public/account.html
+++ b/public/account.html
@@ -31,15 +31,16 @@
     <main class="account-page">
         <section class="account-header fade-in">
             <div class="account-user-card">
-                <h1 class="account-title">Welcome back, <span class="account-name" data-placeholder="Not entered"></span></h1>
+                <h1 class="account-title">Welcome back, <span class="account-name" id="user-username" data-placeholder=""></span></h1>
                 <p class="account-email">Email: <span id="user-email">Loading...</span></p>
-                <p class="account-meta">Member since: <span data-placeholder="Not entered"></span></p>
-                <p class="account-meta">Goal: <span data-placeholder="Not entered"></span></p>
-                <p class="account-meta">Weight: <span data-placeholder="Not entered"></span></p>
-                <p class="account-meta">Weight Goal: <span data-placeholder="Not entered"></span></p>
-                <p class="account-meta">Height: <span data-placeholder="Not entered"></span></p>
-                <nav class="enter-details-btn"><a href="index.html">Enter details</a></nav>
-            </div>
+                <p class="account-meta">Member since: <span id="user-member-since" data-placeholder="Not entered"></span></p>
+                <p class="account-meta">Goal: <span id="user-goal" data-placeholder="Not entered"></span></p>
+                <p class="account-meta">Weight: <span id="user-weight" data-placeholder="Not entered"></span></p>
+                <p class="account-meta">Weight Goal: <span id="user-weight-goal" data-placeholder="Not entered"></span></p>
+                <p class="account-meta">Height: <span id="user-height" data-placeholder="Not entered"></span></p>
+                <nav class="enter-details-btn"><a href="log_details.html">Enter details</a></nav>
+              </div>
+              
             
             <div class="account-stats-card">
                 <div class="stat">
@@ -60,7 +61,10 @@
         <section class="account-grid">
 
             <section class="account-card fade-in">
-                <h2>Recent Activity</h2>
+                <div class="activity-header">
+                    <h2>Recent Activity</h2>
+                    <a class="enter-details-btn small-btn" href="log_activity.html">Log activity</a>
+                </div>            
                 <ul class="activity-list">
                     <li>
                         <span class="activity-title">Push Day (Chest / Triceps)</span>
