--- a/public/log_details.html
+++ b/public/log_details.html
@@ -11,6 +11,49 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png"/>
 </head>
 <body>
-    
+    <div class="header">
+        <header>
+            <div class="navbar">
+                <div class="logo">
+                    <img src="images/logo.png" alt="LiftOff logo"/>
+                </div>
+                <h2>LiftOff!</h2>
+                <div class="links">
+                    <nav><a href="index.html">Home</a></nav>
+                    <nav><a href="account.html">Account</a></nav>
+                    <nav><a href="log_details.html">Log details</a></nav>
+                    <nav><a href="login.html">Logout</a></nav>
+                </div>
+            </div>
+        </header>
+    </div>
+
+    <main class="details-page">
+        <section class="details-card fade-in">
+            <h1 class="details-title">Log your details</h1>
+            <p class="details-subtitle">Update your profile so your dashboard reflects your real goals and progress.</p>
+
+            <form class="details-form" action="/details" method="POST">
+                <label for="username">Username</label>
+                <input id="username" name="username" type="text" placeholder="Your display name" required>
+
+                <label for="goal">Goal</label>
+                <input id="goal" name="goal" type="text" placeholder="Build strength, lose fat, etc." required>
+
+                <label for="weight">Current weight (kg)</label>
+                <input id="weight" name="weight" type="number" step="0.1" min="0" placeholder="e.g. 68.5" required>
+
+                <label for="weight_goal">Weight goal (kg)</label>
+                <input id="weight_goal" name="weight_goal" type="number" step="0.1" min="0" placeholder="e.g. 62.0" required>
+
+                <label for="height">Height (cm)</label>
+                <input id="height" name="height" type="number" step="0.1" min="0" placeholder="e.g. 175" required>
+
+                <button type="submit" class="login-btn details-submit">Save details</button>
+            </form>
+        </section>
+    </main>
+
+    <script src="/js/fade.js"></script>
 </body>
 </html>
