--- a/public/core.html
+++ b/public/core.html
@@ -21,6 +21,12 @@
                 <div class="nav-search">
                     <input id="exercise-search" type="text" placeholder="Search exercises">
                 </div>
+                <div class="accessibility-controls" aria-label="Display settings">
+                    <button id="font-decrease" type="button" aria-label="Decrease text size">A-</button>
+                    <button id="font-reset" type="button" aria-label="Reset text size">A</button>
+                    <button id="font-increase" type="button" aria-label="Increase text size">A+</button>
+                    <button id="theme-toggle" type="button" aria-pressed="false" aria-label="Toggle light and dark mode">Toggle Light/Dark Mode</button>
+                </div>
                 <div class="links">
                     <nav><a href="index.html">Home</a></nav>
                     <nav><a href="account.html">Account</a></nav>
@@ -30,59 +36,19 @@
             </div>
         </header>
     </div>
-
-    <main class="exercise-page">
-        <section class="exercise-header-row fade-in">
-            <h1>Core exercises</h1>
-            <p>Scroll through or search for a specific core movement above.</p>
-        </section>
-
-        <section class="exercise-grid fade-in">
-            <article class="exercise-card" data-name="Plank" data-bodypart="core">
-                <h3>Plank</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Isometric hold in a straight line, training bracing and overall core stability.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-
-            <article class="exercise-card" data-name="Side Plank" data-bodypart="core">
-                <h3>Side plank</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Side-on hold emphasizing obliques and lateral hip stability.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-
-            <article class="exercise-card" data-name="Hanging Leg Raise" data-bodypart="core">
-                <h3>Hanging leg raise</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Hanging hip flexion for lower abs and grip strength.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-
-            <article class="exercise-card" data-name="Dead Bug" data-bodypart="core">
-                <h3>Dead bug</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Slow, controlled contralateral limb movement while maintaining a braced trunk.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-
-            <article class="exercise-card" data-name="Cable Woodchop" data-bodypart="core">
-                <h3>Cable woodchop</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Rotational movement training obliques and anti-rotation control.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-
-            <article class="exercise-card" data-name="Ab Wheel Rollout" data-bodypart="core">
-                <h3>Ab wheel rollout</h3>
-                <span class="exercise-tag">Core</span>
-                <p>Dynamic anti-extension drill challenging the entire anterior core.</p>
-                <div class="exercise-image-placeholder"></div>
-            </article>
-        </section>
-    </main>
-
+    <div id="content-scale-wrapper">
+        <main class="exercise-page" data-region="core">
+            <section class="exercise-header-row fade-in">
+                <h1>Core exercises</h1>
+                <p>Scroll through or search for a specific core movement above.</p>
+            </section>
+        
+            <section class="exercise-grid fade-in" id="exercise-grid"></section>
+        </main>
+    </div>
     <script src="/js/fade.js"></script>
     <script src="/js/exercise_search.js"></script>
+    <script src="/js/exercise_page.js"></script>
+    <script src="/js/accessibility.js"></script>
 </body>
 </html>
